# modern-python-fastapi-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: python-app.yml
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
{{cookiecutter.project_name}}/test/: test_main.py
